# coda-node

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.agents/skills/read-docs/: SKILL.md
.agents/skills/update-docs/: SKILL.md
.claude/skills/: update-docs.md
.github/workflows/: ci.yml
docs/: INDEX.md
docs/auth/: INDEX.md  KEYPAIR_LIFECYCLE.md  keypair-lifecycle.md
docs/bootstrap/: INDEX.md  connect-protocol.md  credential-persistence.md  token-lifecycle.md
docs/configuration/: ENVIRONMENT_VARIABLES.md  INDEX.md  SETTINGS_REFERENCE.md  environment-variables.md  settings-reference.md
docs/frameworks/: DEVICE_CONFIG.md  INDEX.md  device-config.md  registry.md
docs/jobs/: CONSUMER.md  EXECUTOR.md  INDEX.md  IR_SCHEMA.md  consumer.md  executor.md  ir-schema.md
docs/node/: CONNECT_PROTOCOL.md
docs/operations/: INDEX.md  cli.md  error-handling.md
docs/self-service/: CONNECT_PROTOCOL.md  INDEX.md  connect-protocol.md  credential-persistence.md  token-lifecycle.md
docs/vpn/: CLOUD_INFRASTRUCTURE.md  INDEX.md  cloud-infrastructure.md  health-monitoring.md  tunnel-lifecycle.md
docs/webhooks/: INDEX.md
self_service/: __init__.py
self_service/server/: __init__.py  app.py  auth.py  cli.py  config.py  consumer.py  executor.py  ir.py  webhook.py
self_service/vpn/: __init__.py  guard.py  service.py
src/coda_node/: __init__.py  errors.py
src/coda_node/server/: app.py  config.py  consumer.py  device_topology.py  heartbeat.py  ir.py
src/coda_node/vpn/: __init__.py  service.py
src/self_service/: __init__.py  errors.py
src/self_service/server/: app.py  auth.py  cli.py  config.py  consumer.py  daemon.py  executor.py  heartbeat.py  qasm.py  webhook.py
src/self_service/vpn/: __init__.py  service.py
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_consumer.py  test_daemon.py  test_device_topology.py  test_frameworks.py  test_heartbeat.py  test_ir.py  test_main.py  test_node.py  test_qasm.py  test_self_service.py  test_self_service_smoketest.py  test_vpn.py  test_webhook.py
